# infocast

./: CMakeLists.txt  README.md  infocast.cpp  infocast.h  infocast_network.cpp  infocast_network.h  infocast_sensors.cpp  infocast_sensors.h  say_thread.cpp  say_thread.h
extras/default/: infocast
extras/init.d/: infocast
